--- a/styles.css
+++ b/styles.css
@@ -1,60 +1,292 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background: #F9F4FB;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background: #f9f4fb;
+}
+:root {
+  font-size: 62.5%;
+  font-family: "mulish", sans-serif;
 }
 
-:root {
-    font-size: 62.5%;
-    font-family: "mulish", sans-serif;
-}
+/* SECAO DO HEADER */
 
 h1 {
-    color: #B52184;
-    font-size: 3.2rem;
-    font-weight: bold;
+  color: hsl(320, 69%, 42%);
+  font-size: 3.2rem;
+  font-weight: 900;
+  letter-spacing: 0%;
 }
 
 p {
-   color: #312D64;
-   font-size: 2.0rem; 
-   font-weight: 600;
+  color: #312d64;
+  font-size: 2rem;
+  font-weight: 600;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
-    text-align: center;
-    margin: auto;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+  text-align: center;
+  margin: auto;
+  padding-bottom: 9.3rem;
 }
 
 .astronauta {
-   padding: 0 33px;
+  padding: 0 33px;
 }
 
 .astronauta img {
-    max-width: 100%;
-    max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 header .headerText {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 1.7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1.7rem;
 }
 
 .headerText img {
-    height: 4.5rem;
-    width: 3rem;
-    padding: 30px 14px;
-    border: solid 4px #B52184;
-    border-radius: 760px;  
-    box-sizing: unset; 
-    margin-top: 3.5rem;
+  height: 4.5rem;
+  width: 3rem;
+  padding: 30px 14px;
+  border: solid 4px #b52184;
+  border-radius: 760px;
+  box-sizing: unset;
+  margin-top: 3.5rem;
 }
 
+/* SECAO DE TEXTOS */
+
+.textos {
+  display: flex;
+  flex-direction: column;
+  background: linear-gradient(90deg, #343193, #302C63);
+  padding: 5rem 3.9rem;
+  gap: 5rem;
+}
+
+.textos div {
+  background: #ffffff;
+  border-radius: 20px;
+  padding: 2.6rem 6rem 2.6rem 2.6rem;
+}
+
+h2 {
+  color: #b52184;
+  font-size: 2.9rem;
+  font-weight: 900;
+  letter-spacing: 0%;
+  margin-top: 2rem;
+}
+
+.textos div p {
+  font-size: 1.6rem;
+  margin-top: 2.3rem;
+}
+
+/* SECAO DO CONTATO */
+
+.contato {
+  padding: 7.5rem 4rem 6.5rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 4.3rem;
+  gap: 2.4rem;
+}
+
+.contato input {
+  display: block;
+  width: 100%;
+  height: 4.8rem;
+  border-radius: 16px;
+  border: 1.5px solid #312d64;
+  font-family: "Mulish", sans-serif;
+  color: #312d64;
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding-left: 5rem;
+  background: #f9f4fb;
+}
+
+.input-wrapper label {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+}
+
+textarea {
+  width: 100%;
+  border-radius: 16px;
+  border: 1.5px solid #312d64;
+  font-family: "Mulish", sans-serif;
+  color: #312d64;
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding-left: 1.6rem;
+  padding-top: 1.2rem;
+  background: #f9f4fb;
+}
+
+#text {
+  background-image: url("/img/Vector\ \(5\).svg");
+  background-repeat: no-repeat;
+  background-position: 1.4rem center;
+}
+
+#email {
+  background-image: url("/img/Vector\ \(4\).svg");
+  background-repeat: no-repeat;
+  background-position: 1.4rem center;
+}
+
+textarea::placeholder {
+  opacity: 1;
+}
+
+input::placeholder {
+  opacity: 1;
+}
+
+button {
+  background: linear-gradient(90deg, #343193, #302c63);
+  width: fit-content;
+  padding: 1rem 1.6rem;
+  font-family: "Mulish", sans-serif;
+  color: #312d64;
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: white;
+  border-radius: 16px;
+  line-height: 24px;
+  border: none;
+}
+
+/* FOOTER SECTION */
+
+footer {
+  background: linear-gradient(90deg, #343193, #302c63);
+  padding: 2.6rem;
+  display: flex;
+}
+
+footer p {
+  margin: auto;
+  font-size: 1.9rem;
+  font-weight: 600;
+  color: white;
+}
+
+.contato img {
+  display: none;
+}
+
+
+/* MEDIA SECTION */
+
+
+@media (min-width: 1000px) {
+  
+  header h1 {
+    font-size: 5.8rem;
+  }
+  
+  header p {
+    font-size: 3.2rem;
+  }
+  
+  header {
+    flex-direction: row-reverse;
+    min-height: 90vh;
+    justify-content: space-around;
+  }
+  
+  .astronauta {
+    height: 90vh;
+  }
+  
+  .astronauta img {
+    height: 90%;
+    object-fit: fill;
+    overflow: visible;
+  }
+  
+  header .headerText {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-top: 18rem;
+    margin-left: 10rem;
+  }
+  
+  .headerText img {
+    margin-top: 18rem;
+    align-self: flex-start;
+  }
+
+  .textos {
+    flex-direction: row;
+    background: linear-gradient(90deg, #343193, #302C63);
+    padding: 6.4rem 10rem;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .textos div {
+    border-radius: 24px;
+    padding: 3.2rem 1.3rem 7rem 3.2rem;
+  }
+  
+  h2 {
+    font-size: 3.5rem;
+    margin-top: 4rem;
+  }
+  
+  .textos div p {
+    font-size: 2rem;
+    font-weight: 600;
+    margin-top: 2.3rem;
+    width: 32rem;
+  }
+
+  .contato {
+    display: flex;
+    padding: 0;
+  }
+
+  .contatoDesktop {
+    padding: 9.5rem 11rem;
+    width: 100%;
+  }
+
+ .estrelas {
+  min-height: 100%;
+  object-fit: cover;
+ }
+  .estrelas img {
+    display: initial;
+    height: 100%;
+  }
+
+  form {
+    margin-top: 3rem;
+  }
+  
+}
+
+@media (min-width: 1000px) and (max-width: 1300px) {
+  .contatoDesktop {
+    padding: 9.5rem 2rem 9.5rem 5rem;
+  }
+
+}
